MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>