MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/ConfirmedMilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmedMilestoneDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Confirmed Milestone Date</label>
    <type>Date</type>
</CustomField>