MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Construction_Progress__c.field-meta.xml
<CustomField>
    <fullName>Construction_Progress__c</fullName>
    <label>Construction Progress</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>