MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Milestone_Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Batch_Date__c</fullName>
    <formula>IF(
	ISBLANK(ConfirmedMilestoneDate__c),
	Milestone_Due_Date__c - 45,
	ConfirmedMilestoneDate__c - 45
)</formula>
    <label>Milestone Batch Date</label>
    <type>Date</type>
</CustomField>