MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Milestone_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>