MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/MilestoneDue__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDue__c</fullName>
    <formula>IF(
ISBLANK(ConfirmedMilestoneDate__c),
Milestone_Due_Date__c,
ConfirmedMilestoneDate__c
)</formula>
    <label>Milestone Due</label>
    <type>Date</type>
</CustomField>