MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Milestones__c.field-meta.xml
<CustomField>
    <fullName>Milestones__c</fullName>
    <label>Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Milestones_type</valueSetName>
    </valueSet>
</CustomField>