MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Milestone</relationshipLabel>
    <relationshipName>Milestone</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>