MODON MRE BPDEV/force-app/main/default/objects/Milestone__c/fields/Sub_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Sub_Milestone__c</fullName>
    <label>Sub-Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal Completion</fullName>
            </value>
            <value>
                <fullName>Home Preview with Customer</fullName>
            </value>
            <value>
                <fullName>PS Clearance</fullName>
            </value>
            <value>
                <fullName>Periodic Home Check</fullName>
            </value>
            <value>
                <fullName>Pre-Handover Check</fullName>
            </value>
            <value>
                <fullName>Handover</fullName>
            </value>
            <value>
                <fullName>Title Deed Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>